--- a/project-management-platform/modules/core/src/com/company/platform/main/app.properties
+++ b/project-management-platform/modules/core/src/com/company/platform/main/app.properties
@@ -1,18 +1,22 @@
+#
+# TODO Copyright
+#
+
 ###############################################################################
 #                              Configuration                                  #
 ###############################################################################
 
 cuba.dbmsType = hsql
 
-cuba.springContextConfig = +com/company/platform/spring.xml
+cuba.springContextConfig = +com/company/platform/main/spring.xml
 
-cuba.persistenceConfig = +com/company/platform/persistence.xml
+cuba.persistenceConfig = +com/company/platform/main/persistence.xml
 
-cuba.metadataConfig = +com/company/platform/metadata.xml
+cuba.metadataConfig = +com/company/platform/main/metadata.xml
 
-cuba.viewsConfig = +com/company/platform/views.xml
+cuba.viewsConfig = +com/company/platform/main/views.xml
 
-cuba.mainMessagePack = +com.company.platform.core
+cuba.mainMessagePack = +com.company.platform.core.main
 
 cuba.keyForSecurityTokenEncryption = 9jXXS3e3Hz5WqhHv
 
