--- a/project-management-platform/modules/web/src/com/company/platform/main/web-app.properties
+++ b/project-management-platform/modules/web/src/com/company/platform/main/web-app.properties
@@ -1,24 +1,28 @@
+#
+# TODO Copyright
+#
+
 ###############################################################################
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.springContextConfig = +com/company/platform/web-spring.xml
+cuba.springContextConfig = +com/company/platform/main/web-spring.xml
 
-cuba.dispatcherSpringContextConfig = +com/company/platform/web-dispatcher-spring.xml
+cuba.dispatcherSpringContextConfig = +com/company/platform/main/web-dispatcher-spring.xml
 
-cuba.persistenceConfig = +com/company/platform/persistence.xml
+cuba.persistenceConfig = +com/company/platform/main/persistence.xml
 
-cuba.metadataConfig = +com/company/platform/metadata.xml
+cuba.metadataConfig = +com/company/platform/main/metadata.xml
 
-cuba.viewsConfig = +com/company/platform/views.xml
+cuba.viewsConfig = +com/company/platform/main/views.xml
 
-cuba.windowConfig = +com/company/platform/web-screens.xml
+cuba.windowConfig = +com/company/platform/main/web-screens.xml
 
-cuba.menuConfig = +com/company/platform/web-menu.xml
+cuba.menuConfig = +com/company/platform/main/web-menu.xml
 
-cuba.permissionConfig = +com/company/platform/web-permissions.xml
+cuba.permissionConfig = +com/company/platform/main/web-permissions.xml
 
-cuba.mainMessagePack = +com.company.platform.gui com.company.platform.web
+cuba.mainMessagePack = +com.company.platform.main.gui com.company.platform.main.web
 
 cuba.anonymousSessionId = 6d620961-7c77-8c8d-b45b-8f7b0685c3cd
 
