--- a/project-management-platform/modules/web/web/WEB-INF/web.xml
+++ b/project-management-platform/modules/web/web/WEB-INF/web.xml
@@ -11,8 +11,7 @@
     <!-- Application properties config files -->
     <context-param>
         <param-name>appPropertiesConfig</param-name>
-        <param-value>classpath:cuba-web-app.properties
-            classpath:com/company/platform/main/web-app.properties
+        <param-value>classpath:com/company/platform/main/web-app.properties
             /WEB-INF/local.app.properties
             "file:${catalina.home}/conf/company-platform/local.app.properties"</param-value>
     </context-param>
